--- a/back/src/config/config.json
+++ b/back/src/config/config.json
@@ -1,3 +1,12 @@
 {
-  "port" : 4000
+  "port" : 4000,
+  "database" : {
+      "host" : "localhost",
+      "port" : 3306,
+      "maxPoolSize" : 10,
+      "username" : "admin",
+      "password" : "admin",
+      "database" : "inside",
+      "sslMode" : "require"
+  }
 }
